Now using the new corpusstructure API and not using archive_node_IDs anymore internally. Made necessary changes in the code to cope with this. Also changed tests and stories. Some of the stories are still not working well, so more changes are needed there.