@@ -37,14 +37,15 @@ public class LamusWorkspaceNodeTest {
     
     private int workspaceNodeID = 10;
     private int workspaceID = 1;
-    private int archiveNodeID = 100;
     private URI profileSchemaURI;
     private String workspaceNodeName = "nodeName";
     private String workspaceNodeTitle = "nodeTitle";
     private WorkspaceNodeType workspaceNodeType = WorkspaceNodeType.METADATA;
-    private URL nodeURL;
+    private URL workspaceNodeURL;
+    private URI archiveNodeURI;
+    private URL archiveNodeURL;
+    private URL originNodeURL;
     private WorkspaceNodeStatus workspaceNodeStatus = WorkspaceNodeStatus.NODE_ISCOPY;
-    private String workspaceNodePid = UUID.randomUUID().toString();
     private String workspaceNodeFormat = "someFormat";
     
     public LamusWorkspaceNodeTest() {
@@ -61,8 +62,11 @@ public class LamusWorkspaceNodeTest {
     @Before
     public void setUp() throws URISyntaxException, MalformedURLException {
         
-        this.profileSchemaURI = new URI("http://some.uri");
-        this.nodeURL = new URL("http://some.uri");
+        this.profileSchemaURI = new URI("http://some.uri/file.xsd");
+        this.workspaceNodeURL = new URL("file:/workspace/some.uri/file.cmdi");
+        this.archiveNodeURI = new URI(UUID.randomUUID().toString());
+        this.archiveNodeURL = new URL("file:/archive/some.url/file.cmdi");
+        this.originNodeURL = this.archiveNodeURL;
     }
     
     @After
@@ -76,23 +80,22 @@ public class LamusWorkspaceNodeTest {
     public void constructorWithAllParametersProperlyCreatesWorkspace() {
 
         WorkspaceNode testNode = new LamusWorkspaceNode(
-                this.workspaceNodeID, this.workspaceID, this.archiveNodeID,
+                this.workspaceNodeID, this.workspaceID,
                 this.profileSchemaURI, this.workspaceNodeName, this.workspaceNodeTitle,
-                this.workspaceNodeType, this.nodeURL, this.nodeURL, this.nodeURL,
-                this.workspaceNodeStatus, this.workspaceNodePid, this.workspaceNodeFormat);
+                this.workspaceNodeType, this.workspaceNodeURL, this.archiveNodeURI,
+                this.archiveNodeURL, this.originNodeURL,
+                this.workspaceNodeStatus, this.workspaceNodeFormat);
         
         assertEquals("Value for 'workspaceNodeID' is not the expected one.", this.workspaceNodeID, testNode.getWorkspaceNodeID());
         assertEquals("Value for 'workspaceID' is not the expected one.", this.workspaceID, testNode.getWorkspaceID());
-        assertEquals("Value for 'archiveNodeID' is not the expected one.", this.archiveNodeID, testNode.getArchiveNodeID());
         assertEquals("Value for 'profileSchemaURI' is not the expected one.", this.profileSchemaURI, testNode.getProfileSchemaURI());
         assertEquals("Value for 'name' is not the expected one.", this.workspaceNodeName, testNode.getName());
         assertEquals("Value for 'title' is not the expected one.", this.workspaceNodeTitle, testNode.getTitle());
         assertEquals("Value for 'type' is not the expected one.", this.workspaceNodeType, testNode.getType());
-        assertEquals("Value for 'workspaceURL' is not the expected one.", this.nodeURL, testNode.getWorkspaceURL());
-        assertEquals("Value for 'archiveURL' is not the expected one.", this.nodeURL, testNode.getArchiveURL());
-        assertEquals("Value for 'originURL' is not the expected one.", this.nodeURL, testNode.getOriginURL());
+        assertEquals("Value for 'workspaceURL' is not the expected one.", this.workspaceNodeURL, testNode.getWorkspaceURL());
+        assertEquals("Value for 'archiveURI' is not the expected one.", this.archiveNodeURI, testNode.getArchiveURI());
+        assertEquals("Value for 'originURL' is not the expected one.", this.originNodeURL, testNode.getOriginURL());
         assertEquals("Value for 'status' is not the expected one.", this.workspaceNodeStatus, testNode.getStatus());
-        assertEquals("Value for 'pid' is not the expected one.", this.workspaceNodePid, testNode.getPid());
         assertEquals("Value for 'format' is not the expected one.", this.workspaceNodeFormat, testNode.getFormat());
     }
     
@@ -105,16 +108,18 @@ public class LamusWorkspaceNodeTest {
     public void nodesAreEqual() {
 
         WorkspaceNode testWorkspaceNode1 = new LamusWorkspaceNode(
-                this.workspaceNodeID, this.workspaceID, this.archiveNodeID,
+                this.workspaceNodeID, this.workspaceID,
                 this.profileSchemaURI, this.workspaceNodeName, this.workspaceNodeTitle,
-                this.workspaceNodeType, this.nodeURL, this.nodeURL, this.nodeURL,
-                this.workspaceNodeStatus, this.workspaceNodePid, this.workspaceNodeFormat);
+                this.workspaceNodeType, this.workspaceNodeURL, this.archiveNodeURI,
+                this.archiveNodeURL, this.originNodeURL,
+                this.workspaceNodeStatus, this.workspaceNodeFormat);
         
         WorkspaceNode testWorkspaceNode2 = new LamusWorkspaceNode(
-                this.workspaceNodeID, this.workspaceID, this.archiveNodeID,
+                this.workspaceNodeID, this.workspaceID,
                 this.profileSchemaURI, this.workspaceNodeName, this.workspaceNodeTitle,
-                this.workspaceNodeType, this.nodeURL, this.nodeURL, this.nodeURL,
-                this.workspaceNodeStatus, this.workspaceNodePid, this.workspaceNodeFormat);
+                this.workspaceNodeType, this.workspaceNodeURL, this.archiveNodeURI,
+                this.archiveNodeURL, this.originNodeURL,
+                this.workspaceNodeStatus, this.workspaceNodeFormat);
         
         assertEquals("Workspace objects are not equal.", testWorkspaceNode1, testWorkspaceNode2);
     }
@@ -123,16 +128,18 @@ public class LamusWorkspaceNodeTest {
     public void nodesHaveSameHashCode() {
 
         WorkspaceNode testWorkspaceNode1 = new LamusWorkspaceNode(
-                this.workspaceNodeID, this.workspaceID, this.archiveNodeID,
+                this.workspaceNodeID, this.workspaceID,
                 this.profileSchemaURI, this.workspaceNodeName, this.workspaceNodeTitle,
-                this.workspaceNodeType, this.nodeURL, this.nodeURL, this.nodeURL,
-                this.workspaceNodeStatus, this.workspaceNodePid, this.workspaceNodeFormat);
+                this.workspaceNodeType, this.workspaceNodeURL, this.archiveNodeURI,
+                this.archiveNodeURL, this.originNodeURL,
+                this.workspaceNodeStatus, this.workspaceNodeFormat);
         
         WorkspaceNode testWorkspaceNode2 = new LamusWorkspaceNode(
-                this.workspaceNodeID, this.workspaceID, this.archiveNodeID,
+                this.workspaceNodeID, this.workspaceID,
                 this.profileSchemaURI, this.workspaceNodeName, this.workspaceNodeTitle,
-                this.workspaceNodeType, this.nodeURL, this.nodeURL, this.nodeURL,
-                this.workspaceNodeStatus, this.workspaceNodePid, this.workspaceNodeFormat);
+                this.workspaceNodeType, this.workspaceNodeURL, this.archiveNodeURI,
+                this.archiveNodeURL, this.originNodeURL,
+                this.workspaceNodeStatus, this.workspaceNodeFormat);
         
         assertEquals("Workspace objects don't have the same hashcode.", testWorkspaceNode1.hashCode(), testWorkspaceNode2.hashCode());
     }
@@ -145,16 +152,18 @@ public class LamusWorkspaceNodeTest {
         
         URL differentURL = new URL("http://some/different/url");
         WorkspaceNode testWorkspaceNode1 = new LamusWorkspaceNode(
-                this.workspaceNodeID, this.workspaceID, this.archiveNodeID,
+                this.workspaceNodeID, this.workspaceID,
                 this.profileSchemaURI, this.workspaceNodeName, this.workspaceNodeTitle,
-                this.workspaceNodeType, this.nodeURL, this.nodeURL, this.nodeURL,
-                this.workspaceNodeStatus, this.workspaceNodePid, this.workspaceNodeFormat);
+                this.workspaceNodeType, this.workspaceNodeURL, this.archiveNodeURI,
+                this.archiveNodeURL, this.originNodeURL,
+                this.workspaceNodeStatus, this.workspaceNodeFormat);
         
         WorkspaceNode testWorkspaceNode2 = new LamusWorkspaceNode(
-                this.workspaceNodeID, this.workspaceID, this.archiveNodeID,
+                this.workspaceNodeID, this.workspaceID,
                 this.profileSchemaURI, this.workspaceNodeName, this.workspaceNodeTitle,
-                this.workspaceNodeType, differentURL, this.nodeURL, this.nodeURL,
-                this.workspaceNodeStatus, this.workspaceNodePid, this.workspaceNodeFormat);
+                this.workspaceNodeType, differentURL, this.archiveNodeURI,
+                this.archiveNodeURL, this.originNodeURL,
+                this.workspaceNodeStatus, this.workspaceNodeFormat);
         
         assertFalse("Workspace objects should not be equal.", testWorkspaceNode1.equals(testWorkspaceNode2));
     }
@@ -164,16 +173,18 @@ public class LamusWorkspaceNodeTest {
         
         URL differentURL = new URL("http://some/different/url");
         WorkspaceNode testWorkspaceNode1 = new LamusWorkspaceNode(
-                this.workspaceNodeID, this.workspaceID, this.archiveNodeID,
+                this.workspaceNodeID, this.workspaceID,
                 this.profileSchemaURI, this.workspaceNodeName, this.workspaceNodeTitle,
-                this.workspaceNodeType, this.nodeURL, this.nodeURL, this.nodeURL,
-                this.workspaceNodeStatus, this.workspaceNodePid, this.workspaceNodeFormat);
+                this.workspaceNodeType, this.workspaceNodeURL, this.archiveNodeURI,
+                this.archiveNodeURL, this.originNodeURL,
+                this.workspaceNodeStatus, this.workspaceNodeFormat);
         
         WorkspaceNode testWorkspaceNode2 = new LamusWorkspaceNode(
-                this.workspaceNodeID, this.workspaceID, this.archiveNodeID,
+                this.workspaceNodeID, this.workspaceID,
                 this.profileSchemaURI, this.workspaceNodeName, this.workspaceNodeTitle,
-                this.workspaceNodeType, differentURL, this.nodeURL, this.nodeURL,
-                this.workspaceNodeStatus, this.workspaceNodePid, this.workspaceNodeFormat);
+                this.workspaceNodeType, differentURL, this.archiveNodeURI,
+                this.archiveNodeURL, this.originNodeURL,
+                this.workspaceNodeStatus, this.workspaceNodeFormat);
         
         assertFalse("Workspace objects should not have the same hashcode.", testWorkspaceNode1.hashCode() == testWorkspaceNode2.hashCode());
     }
@@ -182,16 +193,18 @@ public class LamusWorkspaceNodeTest {
     public void nodesComparedWithObjectOfDifferentType() {
 
         WorkspaceNode testWorkspaceNode1 = new LamusWorkspaceNode(
-                this.workspaceNodeID, this.workspaceID, this.archiveNodeID,
+                this.workspaceNodeID, this.workspaceID,
                 this.profileSchemaURI, this.workspaceNodeName, this.workspaceNodeTitle,
-                this.workspaceNodeType, this.nodeURL, this.nodeURL, this.nodeURL,
-                this.workspaceNodeStatus, this.workspaceNodePid, this.workspaceNodeFormat);
+                this.workspaceNodeType, this.workspaceNodeURL, this.archiveNodeURI,
+                this.archiveNodeURL, this.originNodeURL,
+                this.workspaceNodeStatus, this.workspaceNodeFormat);
         
         WorkspaceNode testWorkspaceNode2 = new SomeOtherWorkspaceNode(
-                this.workspaceNodeID, this.workspaceID, this.archiveNodeID,
+                this.workspaceNodeID, this.workspaceID,
                 this.profileSchemaURI, this.workspaceNodeName, this.workspaceNodeTitle,
-                this.workspaceNodeType, this.nodeURL, this.nodeURL, this.nodeURL,
-                this.workspaceNodeStatus, this.workspaceNodePid, this.workspaceNodeFormat);
+                this.workspaceNodeType, this.workspaceNodeURL, this.archiveNodeURI,
+                this.archiveNodeURL, this.originNodeURL,
+                this.workspaceNodeStatus, this.workspaceNodeFormat);
         
         assertFalse("Workspace objects should not be equal.", testWorkspaceNode1.equals(testWorkspaceNode2));
     }
@@ -200,22 +213,22 @@ public class LamusWorkspaceNodeTest {
     public void testToString() {
         
         WorkspaceNode testWorkspaceNode = new LamusWorkspaceNode(
-                this.workspaceNodeID, this.workspaceID, this.archiveNodeID,
+                this.workspaceNodeID, this.workspaceID,
                 this.profileSchemaURI, this.workspaceNodeName, this.workspaceNodeTitle,
-                this.workspaceNodeType, this.nodeURL, this.nodeURL, this.nodeURL,
-                this.workspaceNodeStatus, this.workspaceNodePid, this.workspaceNodeFormat);
+                this.workspaceNodeType, this.workspaceNodeURL, this.archiveNodeURI,
+                this.archiveNodeURL, this.originNodeURL,
+                this.workspaceNodeStatus, this.workspaceNodeFormat);
         String expectedString = "Workspace Node ID: " + testWorkspaceNode.getWorkspaceNodeID()
                 + ", Workspace ID: " + testWorkspaceNode.getWorkspaceID()
-                + ", Archive Node ID: " + testWorkspaceNode.getArchiveNodeID()
                 + ", Profile Schema URI: " + testWorkspaceNode.getProfileSchemaURI()
                 + ", Name: " + testWorkspaceNode.getName()
                 + ", Title: " + testWorkspaceNode.getTitle()
                 + ", Type: " + testWorkspaceNode.getType()
                 + ", Workspace URL: " + testWorkspaceNode.getWorkspaceURL()
+                + ", Archive URI: " + testWorkspaceNode.getArchiveURI()
                 + ", Archive URL: " + testWorkspaceNode.getArchiveURL()
                 + ", Origin URL: " + testWorkspaceNode.getOriginURL()
                 + ", Status: " + testWorkspaceNode.getStatus()
-                + ", PID: " + testWorkspaceNode.getPid()
                 + ", Format: " + testWorkspaceNode.getFormat();
         
         String actualString = testWorkspaceNode.toString();
@@ -228,19 +241,15 @@ class SomeOtherWorkspaceNode implements WorkspaceNode {
     
     private int workspaceNodeID;
     private int workspaceID;
-
-    //TODO Worth having???
-    private int archiveNodeID;
-    
     private URI profileSchemaURI;
     private String name;
     private String title;
     private WorkspaceNodeType type;
     private URL workspaceURL;
+    private URI archiveURI;
     private URL archiveURL;
     private URL originURL;
     private WorkspaceNodeStatus status;
-    private String pid;
     private String format;
     private Collection<WorkspaceParentNodeReference> parentNodesReferences;
     
@@ -248,23 +257,22 @@ class SomeOtherWorkspaceNode implements WorkspaceNode {
         
     }
     
-    public SomeOtherWorkspaceNode(int workspaceNodeID, int workspaceID, int archiveNodeID,
+    public SomeOtherWorkspaceNode(int workspaceNodeID, int workspaceID,
             URI profileSchemaURI, String name, String title, WorkspaceNodeType type,
-            URL workspaceURL, URL archiveURL, URL originURL,
-            WorkspaceNodeStatus status, String pid, String format) {
+            URL workspaceURL, URI archiveURI, URL archiveURL, URL originURL,
+            WorkspaceNodeStatus status, String format) {
         
         this.workspaceNodeID = workspaceNodeID;
         this.workspaceID = workspaceID;
-        this.archiveNodeID = archiveNodeID;
         this.profileSchemaURI = profileSchemaURI;
         this.name = name;
         this.title = title;
         this.type = type;
         this.workspaceURL = workspaceURL;
+        this.archiveURI = archiveURI;
         this.archiveURL = archiveURL;
         this.originURL = originURL;
         this.status = status;
-        this.pid = pid;
         this.format = format;
     }
 
@@ -286,16 +294,6 @@ class SomeOtherWorkspaceNode implements WorkspaceNode {
     @Override
     public void setWorkspaceID(int workspaceID) {
         this.workspaceID = workspaceID;
-    }
-
-    @Override
-    public int getArchiveNodeID() {
-        return this.archiveNodeID;
-    }
-    
-    @Override
-    public void setArchiveNodeID(int archiveNodeID) {
-        this.archiveNodeID = archiveNodeID;
     }
 
     @Override
@@ -354,6 +352,16 @@ class SomeOtherWorkspaceNode implements WorkspaceNode {
     }
 
     @Override
+    public URI getArchiveURI() {
+        return this.archiveURI;
+    }
+    
+    @Override
+    public void setArchiveURI(URI archiveURI) {
+        this.archiveURI = archiveURI;
+    }
+    
+    @Override
     public URL getArchiveURL() {
         return this.archiveURL;
     }
@@ -381,16 +389,6 @@ class SomeOtherWorkspaceNode implements WorkspaceNode {
     @Override
     public void setStatus(WorkspaceNodeStatus status) {
         this.status = status;
-    }
-
-    @Override
-    public String getPid() {
-        return this.pid;
-    }
-
-    @Override
-    public void setPid(String pid) {
-        this.pid = pid;
     }
 
     @Override
